--- a/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.tex
+++ b/manuscripts/24-daryl-dones-pols/24-daryl-dones-pols.tex
@@ -188,7 +188,7 @@
 Orientation in New Zealand}
 \author{Daryl Van Tongeren \and Don E Davis \and Chris G.
 Sibley \and Joseph A. Bulbulia}
-\date{2024-03-14}
+\date{2024-03-27}
 
 \begin{document}
 \maketitle
@@ -202,22 +202,15 @@ disaffiliation, contrasted with a condition in which the population was
 disaffiliated at baseline and remained so. We observe that religious
 disaffiliation reduces conservative/right political orientations. This
 effect is considerably stronger for political conservativism than for
-right-wing orientation. Study 2 replicates Study 1 in the
-religious-at-baseline sub-sample (N = 17,141) to obtain conditional
-treatment-effect estimates that require fewer assumptions. The
-conditional effect-estimates in Study 2 closely approximate the marginal
-effect estimates in Study 1, revealing robustness. In Study 3, we return
-to a population-wide marginal estimand, contrasting the transition to
+right-wing orientation. In Study 2, we contrast the transition to
 religious disaffiliation from affiliation with constant disaffiliation.
 This contrast clarifies whether recent religious disaffiliates are
-subject to ``religious residue'' effects in which attitudes the effects
-religious affiliation linger after disaffiliation. We detect a religious
-residue effect for political conservativism but not for right-wing
-orientation. Overall, these findings suggest that in New Zealand,
-religious disaffiliation affects political orientations by reducing
-conservative and (to a lesser extent) right-wing political orientations,
-with some evidence for religious residue effects for political
-conservativism.
+subject to ``religious residue'' effects. We detect a religious residue
+effect for political conservativism but not for right-wing orientation.
+Overall, these findings suggest that in New Zealand, religious
+disaffiliation affects political orientations by reducing conservative
+and (to a lesser extent) right-wing political orientations, with some
+evidence for religious residue effects for political conservativism.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
@@ -247,11 +240,12 @@ provide sensitivity analyses for unmeasured confounding.
 
 Data were collected as part of The New Zealand Attitudes and Values
 Study (NZAVS) is an annual longitudinal national probability panel study
-of social attitudes, personality, ideology and health outcomes. The
-NZAVS began in 2009. It includes questionnaire responses from a total of
-72,290 New Zealand residents. The NZAVS is university-based,
-not-for-profit and independent of political or corporate funding. see
-\url{https://doi.org/10.17605/OSF.IO/75SNB}
+of social attitudes, personality, ideology and health outcomes. Chris G
+Sibley started the NZAVS in 2009, and it has since grown to a community
+with over sixty investigators. The NZAVS includes questionnaire
+responses from a total of 72,290 New Zealand residents. The NZAVS is
+university-based, not-for-profit and independent of political or
+corporate funding. see \url{https://doi.org/10.17605/OSF.IO/75SNB}
 
 \hyperref[appendix-measures]{Appendix A} provides information about the
 measures used in this study.
@@ -271,26 +265,21 @@ statistics for the outcomes responses at baseline (NZAVS time 10, years
 \subsubsection{The Treatment/Exposure: Religious
 Affiliation}\label{the-treatmentexposure-religious-affiliation}
 
-\textbf{Study 1 and Study 2}: we emulate a ``target trial''
-(\citeproc{ref-hernuxe1n2016a}{Hernán \emph{et al.} 2016}) that
-contrasts two treatments: (1) all start as religiously affiliated in the
-baseline wave and then lose their religious affiliation in the following
-wave; (2) all start as religiously affiliated in the baseline wave and
-remain religiously affiliated. These contrasts answer the question:
-``Does religious disaffiliation effect change political orientations?''
+\textbf{Study 1}: we contrast the following conditions: (1) all start as
+religiously affiliated in the baseline wave and then lose their
+religious affiliation in the following wave (dones); (2) all start as
+religiously affiliated in the baseline wave and remain religiously
+affiliated. The contrast of these conditions addresses the question:
+``Does religious disaffiliation affect change in political
+orientations?''
 
-\textbf{Study 3}: we emulate a ``target trial''
-(\citeproc{ref-hernuxe1n2016a}{Hernán \emph{et al.} 2016}) that
-contrasts a religious affiliation to disaffiliation treatment with
-stable disaffiliation, that is: (1) all start as religiously affiliated
-in the baseline wave and then lose their religious affiliation in the
-following wave contrasted; (2) all start as religiously disaffiliated in
-the baseline wave and then remain religiously disaffiliated: ``Does
-religious disaffiliation effect change political orientations such that
-the those who disaffiliate are different from those who were already
-religiously disaffiliated at baseline?'' Put differently, is there a
-religious residue effect?; see Van Tongeren \emph{et al.}
-(\citeproc{ref-vantongeren2020}{2020}).
+\textbf{Study 2}: we contrast the following conditions: (1) all start as
+religiously affiliated in the baseline wave and then lose their
+religious affiliation in the following wave (dones); (2) all start as
+religiously disaffiliated in the baseline wave and then remain
+religiously disaffiliated: The contrast of these conditions addresses
+the question: is there a religious residue effect? see Van Tongeren
+\emph{et al.} (\citeproc{ref-vantongeren2020}{2020}).
 
 \subsubsection{Outcomes}\label{outcomes}
 
@@ -309,76 +298,38 @@ to 7 = Extremely right-wing)
 Outcomes under the different treatments were assessed one year after the
 treatment wave.
 
-\subsubsection{Causal Contrast of
-Interest}\label{causal-contrast-of-interest}
+\subsubsection{Causal Contrasts}\label{causal-contrasts}
 
-Our causal estimands assume the form of ``shift functions'' or
-``modified treatment policies'':
-
-In \textbf{Study 1}, the causal estimand is:
-
-\[ \text{Average Treatment Effect} = E[Y(a^*,a)|\textcolor{red}{f(A)},L] -  E[Y(a^*, a^*)|\textcolor{red}{f(A)},L] \]
-
-where the shift functions for this causal contrast are as specified as
-follows:
-
-\begin{itemize}
-\item
-  \textbf{TREATMENT: start affiliated and then disaffiliate:} \[
-   f(A) = \begin{cases} a^* & \text{if religious affiliation is absent, shift to religious affiliation} \\ 
-   a & \text{if religious affiliation is present, shift to disaffiliation} \end{cases}
-   \]
-\item
-  \textbf{CONTRAST: start affiliated and remain affiliated:} \[
-   f(A) = a^* ~ \text{if religious affiliation is absent, shift to religious affiliation} \\ 
-  \]
-\end{itemize}
-
-The target population for Study 1 is the New Zealand population.
-
-In \textbf{Study 2}, the causal estimand is the Conditional Average
-Treatment Effect in the Religious Population, \(R = r\)
+In \textbf{Study 1}, the estimand is:
 
 \[ 
-\text{Conditional Average Treatment Effects} = E[Y(a^*,a)|\textcolor{red}{f(A)},L, R = r] -  E[Y(a^*, a^*)|\textcolor{red}{f(A)},L, R = r] 
+\text{Average Treatment Effect} = E[Y(a,a^*)|\textcolor{red}{f(A)},L] -  E[Y(a, a)|\textcolor{red}{f(A)},L] 
 \]
 
-where the shift functions for the causal contrast are the same as in
-Study 1.
+where interventions are as specified as follows:
 
-The target population for Study 2 is those who identify as religious in
-the New Zealand population.
+\[
+   f(A) = \begin{cases} a & \text{if religious affiliation is absent, shift to religious affiliation} \\ 
+   a^* & \text{if religious affiliation is present, shift to disaffiliation} \end{cases}
+   \]
 
-In \textbf{Study 3} we investigate the average treatment effect in the
-full population, as is in Study 1, however, here we contrast the shift
-from religious affiliation to religious disaffiliation with a consistent
-pattern of religious disaffiliation:
+In \textbf{Study 2} where shift function is specified as above:
+
+\[
+f(A) = \begin{cases} a & \text{if religious affiliation is absent, shift to religious affiliation} \\ 
+   a^* & \text{if religious affiliation is present, shift to disaffiliation} \end{cases}
+\]
+
+But the estimand targets the expected difference in outcomes between
+recent religious disaffiliates (dones) with the stably disaffiliated :
 
 \[ 
-\text{Average Treatment Effect} = E[Y(a^*,a)|\textcolor{red}{f(A)},L] -  E[Y(a, a)|\textcolor{red}{f(A)},L] 
+\text{Average Treatment Effect} = E[Y(a,a^*)|\textcolor{red}{f(A)},L] -  E[Y(a^*, a^*)|\textcolor{red}{f(A)},L] 
 \]
 
-where the shift functions for this causal contrast are as specified as
-follows:
-
-\begin{itemize}
-\item
-  \textbf{TREATMENT: start affiliated and then disaffiliate (as in Study
-  1):}
-
-  \[
-   f(A) = \begin{cases} a^* & \text{if religious affiliation is absent, shift to religious affiliation} \\ 
-   a & \text{if religious affiliation is present, shift to disaffiliation} \end{cases}
-   \]
-\item
-  \textbf{CONTRAST: always disaffiliate:}
-
-  \[
-   f(A) = a  ~ \text{if religious affiliation is present, shift to disaffiliation} \\ 
-   \]
-\end{itemize}
-
-The target population for Study 1 is the New Zealand population.
+In both Study 1 and Study 2, we weight the causal contrasts to the New
+Zealand population (age x ethnicity x gender), which is the target
+population for this study.
 
 \subsubsection{Eligibility criteria}\label{eligibility-criteria}
 
@@ -395,11 +346,7 @@ lost to follow up, and adjusted for missingness using inverse
 probability of censoring model -- implemented during estimation in
 \texttt{lmtp} (\citeproc{ref-williams2021}{Williams and Díaz 2021}).
 
-In Study 1, there were 47202 NZAVS participants who met these criteria.
-
-Study 2 had the same eligibility criteria, with the further requirement
-that, at baseline, participants responded ``yes'' to the religious
-affiliation question. There were 17141 who met these criteria.
+There were 47202 NZAVS participants who met these criteria.
 
 \subsubsection{Identification
 Assumptions}\label{identification-assumptions}
@@ -422,20 +369,7 @@ assumptions:
   \textbf{Positivity:} we assume that every subject has a non-zero
   probability of receiving the treatments to be compared.
   \hyperref[appendix-exposures]{Appendix C} shows a change in the
-  treatment variable between NZAVS Time 10 and NZAVS Time 11.\\
-  Notably, the causal estimands in Study 1 and Study 2 require
-  projecting non-religious people into an initial state in which they
-  are religious, an assumption that may arguably strain the positivity
-  assumption. For this reason, in Study 2 we estimate a Conditional
-  Average Treatment effect for the religiously affiliated sub-sample at
-  baseline. The causal quantity that we obtain in Study 2 amounts to a
-  contrast between the average effect among the religiously affiliated
-  had they all lost affiliation with the average effect among the
-  religiously affiliated had they remained affiliated. In New Zealand,
-  the conditional average treatment effect (CATE) requires weaker
-  assumptions that the average or marginal treatment effect in the
-  population as a whole (ATE) because only 40\% of the sample population
-  reports religious affiliation.
+  treatment variable between NZAVS Time 10 and NZAVS Time 11.
 \end{enumerate}
 
 \textbf{Considerations:}
@@ -617,24 +551,32 @@ wave (right-censoring), which reduces bias from loss to
 follow-up/attrition conditional on measured covariates, subject to the
 covariates in the model.
 
-Again in Study 1 and Study 2 we compare two hypothetical interventions:
+Again in Study 1 we contrast the following conditions:
 
 \begin{itemize}
 \item
   \textbf{TREATMENT: all start with religious affiliation and then lose
-  religious affiliation}
+  religious affiliation (DONES)}
 \item
   \textbf{CONTRAST: all start with religious affiliation and then remain
-  religiously affiliated}
+  religiously affiliated (Baseline + Treatment Dissafiliated) }
 \end{itemize}
 
-In Study 3, we contrast a shift from affiliation to disaffiliation with
-an intervention in which everyone is constantly disaffiliated. This
-approach allows us to evaluate the religious residue hypothesis,
-according to which features of religious cognition and behaviour remain
-with disaffiliates even after they have lost their religion
-(\citeproc{ref-vantongeren2020}{Van Tongeren \emph{et al.} 2020}). Thus
-our causal contrast compares:
+This allows us to estimate the marginal effect of disaffiliation on
+dimensions of political orientation.
+
+In Study 2, we contrast the condition of becoming disaffiliated (done)
+with that of being constantly disaffiliated. This approach allows us to
+evaluate the religious residue hypothesis
+(\citeproc{ref-vantongeren2020}{Van Tongeren \emph{et al.} 2020}), which
+predicts recent dones will be more conservative than those who have been
+disaffiliated for at least two years. Note that our data do not allow us
+to contrast never religious with recent religious disaffiliation because
+those are not religious at baseline might have been religious before
+baseline.This means that any inferred differences will be conservative
+for detecting true effects.
+
+Thus, our causal contrast compares:
 
 \begin{itemize}
 \item
@@ -685,9 +627,10 @@ confidence interval that is closest to 1.
 
 \newpage{}
 
-\subsection{Study 1: Causal Effect of Religious Disaffiliation on both
-Political Conservativism and Right-Wing Orientation in the New Zealand
-Population}\label{study-1-causal-effect-of-religious-disaffiliation-on-both-political-conservativism-and-right-wing-orientation-in-the-new-zealand-population}
+\subsection{Study 1: + 1 year Causal Effect of Religious Disaffiliation
+on Political Orientations (Political Conservativism and Right-Wing
+Orientation) in the New Zealand
+Population}\label{study-1-1-year-causal-effect-of-religious-disaffiliation-on-political-orientations-political-conservativism-and-right-wing-orientation-in-the-new-zealand-population}
 
 \begin{figure}
 
@@ -761,90 +704,10 @@ not. Here again, we find evidence for causality.
 
 \newpage{}
 
-\subsection{Study 2: Causal Effect of Religious Disaffiliation on
-Political Conservativism and Right-Wing Orientation (both outcomes were
-standardised) in the Religious-Only Baseline Sample + 1 year after
-disaffiliation
-(CATE).}\label{study-2-causal-effect-of-religious-disaffiliation-on-political-conservativism-and-right-wing-orientation-both-outcomes-were-standardised-in-the-religious-only-baseline-sample-1-year-after-disaffiliation-cate.}
-
-\begin{figure}
-
-\centering{
-
-\includegraphics{24-daryl-dones-pols_files/figure-pdf/fig-att-1.pdf}
-
-}
-
-\caption{\label{fig-att}Figure describing the effect of disaffiliation
-on political conservativism and right-wing orientation (both outcomes
-were standardised) among the religious-only sample+ 1 year after
-dis-affiliation (CATE)}
-
-\end{figure}%
-
-\phantomsection\label{tbl-att}
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.4948}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1649}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0619}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0722}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0825}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1237}}@{}}
-
-\caption{\label{tbl-att}Table describing the effect of disaffiliation on
-political conservativism and right-wing orientation among the
-religious-only sample (both outcomes were standardised) + 1 year after
-dis-affiliation (CATE)}
-
-\tabularnewline
-
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\raggedright
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
-E{[}Y(1){]}-E{[}Y(0){]}
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
-2.5 \%
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
-97.5 \%
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
-E\_Value
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
-E\_Val\_bound
-\end{minipage} \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-Dis-affiliation Effect (CATE): Pol.Conservative & -0.22 & -0.27 & -0.17
-& 1.74 & 1.59 \\
-Dis-affiliation Effect (CATE): Right Wing & -0.07 & -0.12 & -0.01 & 1.33
-& 1.11 \\
-
-\end{longtable}
-
-The Conditional Average Treatment Effect (CATE) represents the expected
-difference in outcomes between treatment and control groups in a stratum
-of the population -- here those who were religiously affiliated at
-baseline.
-
-For the outcome `Dis-affiliation Effect (CATE): Right Wing', the CATE is
--0.07 {[}-0.12,-0.01{]}. The E-value for this effect estimate is 1.33
-with a lower bound of 1.11. At this bound, an unmeasured confounder
-associated with both the treatment and outcome by a risk ratio of 1.11
-each could explain away the observed effect; weaker confounding would
-not. Here, we find evidence for causality.
-
-For the outcome `Dis-affiliation Effect (CATE): Pol.Conservative', the
-CATE is -0.22 {[}-0.27,-0.17{]}. The E-value for this effect estimate is
-1.74, with a lower bound of 1.59. At this bound, an unmeasured
-confounder associated with both the treatment and outcome by a risk
-ratio of 1.59 each could explain away the observed effect; weaker
-confounding would not. Here again, we find evidence for causality.
-
-\subsection{Study 3 Causal Effect of Religious Disaffiliation on
+\subsection{Study 2 Causal Effect of Religious Disaffiliation on
 Political Conservativism and Right Wing Orientation (both outcomes were
-standardised) contrasted with prevalence effect of consistent
-disaffiliation}\label{study-3-causal-effect-of-religious-disaffiliation-on-political-conservativism-and-right-wing-orientation-both-outcomes-were-standardised-contrasted-with-prevalence-effect-of-consistent-disaffiliation}
+standardised) contrasted with consistent
+disaffiliation}\label{study-2-causal-effect-of-religious-disaffiliation-on-political-conservativism-and-right-wing-orientation-both-outcomes-were-standardised-contrasted-with-consistent-disaffiliation}
 
 \begin{figure}
 
@@ -856,8 +719,8 @@ disaffiliation}\label{study-3-causal-effect-of-religious-disaffiliation-on-polit
 
 \caption{\label{fig-contrast}Figure describing the effect of
 disaffiliation on political conservativism and right-wing orientation
-(both outcomes were standardised) contrasted with the prevalence effect
-of constant dissafiliation + 1 year after treatment (ATE)}
+(both outcomes were standardised) contrasted with constant
+dissafiliation + 1 year after treatment (ATE)}
 
 \end{figure}%
 
@@ -927,7 +790,7 @@ affiliated in the first place, and remained unaffiliated.
 prior religious affiliation may leave a
 ``residue''}\label{religious-change-affects-political-attitudes-although-prior-religious-affiliation-may-leave-a-residue}
 
-Here, we target valid inference for three causal effects of religious
+Here, we target valid inference for the causal effects of religious
 disaffiliation on political attitudes by: (1) clearly specifying the
 causal quantities of interest; (2) stating the assumptions required to
 obtain these quantity from data; (3) providing a robust non-parametric
@@ -936,131 +799,36 @@ obtaining the relevant panel data and ordering these data such that
 confounders are measured before causes and causes are measured before
 their effects (\citeproc{ref-bulbulia2023}{Bulbulia 2023}).
 
-For political conservatism and right-wing orientation, disaffiliation
-shifts people to the liberal/left spectrum of orientation. Notably,
-estimates are similar for both the population as a whole (ATE) and the
-religious sub-population (CATE). In both cases, effects are more
-pronounced for political conservatism, with about a .2 SD expected to
-shift toward liberal orientation. Notably, effects were much weaker for
-(reduced) right-wing orientation, and both effects were replicated in
-the religious-at-baseline subsample (Study 2).
+Study 1 investigates a hypothetical treatment in which religious people
+were randomised to disaffiliate (as dones) compared with a hypothetical
+treatment in which they were randomised to remained religious. We
+observe that the recently disaffiliated population is expected to be
+less politically conservative than the consistently religious
+population.
 
-The findings in Study 1 and Study 2 apply to a hypothetical intervention
-in which religious people disaffiliate compared with a hypothetical
-intervention in which they do not. In Study 3, we compare a hypothetical
-intervention in which religious people disaffiliate with one in which
-the population was disaffiliated at baseline and remained disaffiliated
-in the treatment wave. We observe that the recently disaffiliated
-population would be somewhat more politically conservative than the
-permanently disaffiliated population. However we do not observed a
-reliable contrast for right-wing political orientation; notably, effects
-on this parameter were muted in Studies 1 and 2. Overall, our finding
-that political orientations are more conservative under the religious
-disaffiliation intervention compared with the stably disaffiliated
-intervention makes sense in light of Van Tongeren \emph{et al.}
-(\citeproc{ref-vantongeren2020}{2020}), which finds that psychological
-features associated with religious behaviour and cognition remain after
-de-conversion, what Van Tongeren \emph{et al.}
-(\citeproc{ref-vantongeren2020}{2020}) calls a ``religious residue.''
-
-\subsubsection{We do not evaluate the political sources of religious
-change}\label{we-do-not-evaluate-the-political-sources-of-religious-change}
-
-Notably, our models identify the specific effect of religious
-disaffiliation on political orientations. It might be asked, what are
-the effects of changes in political orientations on religious
-affiliation? Such a question could be made precise, and if all
-identification assumptions are satisfied, a statistical estimand could
-be modelled and estimated. However, our interest here is to evaluate the
-effects of religious disaffiliation on political orientation,
-controlling for the prior effects of political orientation on
-disaffiliation.
-
-\subsubsection{Why did the previous studies not detect a residue
-effect?}\label{why-did-the-previous-studies-not-detect-a-residue-effect}
-
-The findings in Study 3 differ from those reported earlier in this
-manuscripts. Whereas Study 3 points to religious residue, our previous
-studies suggest that ``dones'' are more liberal than their long-time
-secular counterparts. We offer the following speculation:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  \textbf{Cross-sectional data limitations}: such data do not provide a
-  reliable standard for evidence for causality because the timing of
-  confounders, treatments, and outcomes cannot be ensured. Correlations
-  in cross sectional data may distort true causal relationships and are
-  known to run in opposition to true causal associations
-  (\citeproc{ref-bulbulia2023}{Bulbulia 2023};
-  \citeproc{ref-westreich2013}{Westreich and Greenland 2013}).
-\item
-  \textbf{Measurement bias owing to recall}: when treatments and
-  pre-treatment responses are based on memory, there is considerable
-  scope for measurement bias
-  (\citeproc{ref-hernan2009MEASUREMENT}{Hernán and Cole 2009}). For
-  instance, individuals recalling their religiosity may misremember both
-  their religiosity and their past political conservatism or liberalism
-  -- introducing directed measurement error.
-\item
-  \textbf{Unmeasured confounders}: valid causal inferences require
-  satisfying the ``no unmeasured confounder'' assumption. It is
-  plausible there are common causes of religious change and left-leaning
-  or liberal ideologies that are not captured in the previous data --
-  such as ``openness.'' Failure to appropriately control for openness,
-  every other potential confounder will yield unreliable causal effect
-  estimates.
-\item
-  \textbf{Challenges in observing the incident-exposure effect}:
-  accurately modelling the causal effects of religious change requires
-  repeated measures time-series data in conversion is observed \emph{in
-  vivo}. Despite the large sample size of over 42,000 individuals, the
-  New Zealand study identified approximately 1,100 instances of
-  religious disaffiliation, as noted in Table~\ref{tbl-transition}. That
-  religious disaffiliation is rare poses considerable data collection
-  challenges.
-\item
-  \textbf{One-year effect vs multi-year effect}: the New Zealand Study
-  reports a one-year effect of religious stability or change. However,
-  processes that begin with disaffiliation might continue for longer
-  than one-year, such that over many years, religious dones are as
-  liberal, or perhaps even more liberal, than long-disaffiliated
-  counterparts.
-\item
-  \textbf{Model misspecification}: methods for obtaining causal effect
-  estimates differ between the studies; one, several, or indeed all of
-  the models employed may be misspecified in the sense that they do not
-  converge to valid inferences for the populations from which data were
-  collected
-\item
-  \textbf{Sampling characteristics}: differences in sampling and in
-  features of the underlying popolations from which the data were
-  variously draw across the studies may ultimately explain the
-  differences we observe across our studies. If there is
-  treatment-effect heterogeneity, there is no need to appeal to
-  reverse-causation, unmeasured confounding, measurement-error bias, or
-  model-misspecification bias to explain these differences.
-\end{enumerate}
-
-Unfortunately, the data do not clarify whether one or any combination of
-these possible explanations, or perhaps entirely different explanations,
-underpin the observed discrepancies across the studies reported in this
-manuscript. Documenting and explaining variation in the effects of
-religious disaffiliation on political attitudes are matters for future
-longitudinal and comparative research.
+Study 2 investigates a hypothetical treatment in which religious people
+were randomised to disaffiliate (as dones) compared with a hypothetical
+treatment in which they were disaffiliated at baseline and remained
+disaffiliated in the treatment wave. This contrast allows us to evaluate
+the religious residue effect. We observe that the recently disaffiliated
+population is expected to be more politically conservative than the
+consistently dissafilliated population, but is not reliably different in
+political right-wing orientation. This finding offers preliminarhy
+evidence for a ``religious residue'' on conservativism Van Tongeren
+\emph{et al.} (\citeproc{ref-vantongeren2020}{2020}).
 
 \subsubsection{Summary}\label{summary}
 
-This study provides robust evidence that religious disaffiliation leads
-to a shift towards liberal political orientations and strong reduction
-in political conservatism. These findings reveal a causal pathway from
-changes in religious affiliation to change in political attitudes. As
-New Zealand society grows more disenchanted with religion, we may expect
-that it will grow more disenchanted with political conservativism, at
-least in the near term.
+This study provides robust evidence that religious disaffiliation causes
+liberal political orientation. Moreover, we find evidence for a
+religious residue effect such that liberal effect does not quite align
+the disaffiliated with those who have been disaffilated for longer
+(perhaps never affiliated). As New Zealand society grows more
+disenchanted with religion, we may expect that it will grow more
+disenchanted with political conservativism, at least in the near term.
 
 Again, whether the causal effects we observe in New Zealand transport to
-other societies remains unknown, an open matter for future
+other societies remains unknown, and an open matter for future
 investigations.
 
 \newpage{}
@@ -1161,18 +929,6 @@ Hernan, MA, and Robins, JM (2023) \emph{Causal inference}, Taylor \&
 Francis. Retrieved from
 \url{https://books.google.co.nz/books?id=/_KnHIAAACAAJ}
 
-\bibitem[\citeproctext]{ref-hernan2009MEASUREMENT}
-Hernán, MA, and Cole, SR (2009) Invited commentary: Causal diagrams and
-measurement bias. \emph{American Journal of Epidemiology},
-\textbf{170}(8), 959--962.
-doi:\href{https://doi.org/10.1093/aje/kwp293}{10.1093/aje/kwp293}.
-
-\bibitem[\citeproctext]{ref-hernuxe1n2016a}
-Hernán, MA, Sauer, BC, Hernández-Díaz, S, Platt, R, and Shrier, I (2016)
-Specifying a target trial prevents immortal time bias and other
-self-inflicted injuries in observational analyses. \emph{Journal of
-Clinical Epidemiology}, \textbf{79}, 7075.
-
 \bibitem[\citeproctext]{ref-hoffman2023}
 Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
 Introducing longitudinal modified treatment policies: A unified
@@ -1272,11 +1028,6 @@ versions of treatment. \emph{Journal of Causal Inference},
 VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
 longitudinal designs for causal inference: A new template for empirical
 studies. \emph{Statistical Science}, \textbf{35}(3), 437466.
-
-\bibitem[\citeproctext]{ref-westreich2013}
-Westreich, D, and Greenland, S (2013) The table 2 fallacy: Presenting
-and interpreting confounder and modifier coefficients. \emph{American
-Journal of Epidemiology}, \textbf{177}(4), 292298.
 
 \bibitem[\citeproctext]{ref-williams_cyberostracism_2000}
 Williams, KD, Cheung, CKT, and Choi, W (2000) Cyberostracism: Effects of
